force-app/main/default/objects/VIN__c/VIN__c.object-meta.xml
<CustomObject>
    <label>VIN</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>VIN Name #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>