force-app/main/default/objects/VIN__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <formula>VIN__c &amp; &quot;_&quot; &amp; Vehicle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>