force-app/main/default/objects/VIN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>VIN__c</columns>
    <columns>Vehicle__c</columns>
    <columns>External_Id__c</columns>
    <columns>Ns_Internal_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>